Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112246

ios: Assert if closing keyboard and touching the screen with another finger

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • 58ea69aaa (dev), fe0c1f110 (tqtc/lts-6.2)

    Description

      To reproduce:

      • run attached example
      • press TextField
      • slide down the keyboard until it disappears and keep holding the finger on screen
      • touch somewhere on screen with another finger

      This output is printed:

      QPlatformInputContext::inputMethodAccepted() does not match actual focus object IM enablement!
      ASSERT: "m_context->isInputPanelVisible()" in file qiosinputcontext.mm, line 213
      

      Attachments

        Activity

          People

            axelspoerl Axel Spoerl
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: